# Midi2Json

./: CMakeLists.txt  README.md  main.cpp  test.json
inc/: midi.h  ws_log.h
src/: json.cpp  midi.c  ws_log.cpp
